# planetGen

./: INSTALL  Makefile.am  README.md  configure.ac
doc/: Doxyfile  Makefile.am
reports/final-report/: Analyse-besoins.tex  Analyse-existant.tex  Architecture-logiciel.tex  Architecture-logiciel.tex.backup  Perspectives.tex  Perspectives.tex.backup  Qualite.tex  Qualite.tex.backup  Resultats.tex  Resultats.tex.backup  final-report.tex  remerciement.tex  report-1.bib
reports/final-report/resources/: diamond_ref.pgm  midpoint_ref.pgm  perlin_hydraulicerosion.pgm  perlin_ref.pgm  perlin_thermalerosion.pgm  simplex_hydraulicerosion.pgm  simplex_thermalerosion.pgm  simplexnoise.pgm
reports/report-1/: chapter-existing-analysis.tex  chapter-resume.tex  report-1.tex
reports/report-2/: conclusion.tex  functional-requirements.tex  introduction.tex  non-functional-requirements.tex  report-2.tex
reports/report-3/: Architecture-Globale.tex  Description-des-composants.tex  Diagramme-de-sequences.tex  report-3.tex
samples/: Makefile.am  bitmapexporter.cc  diamondsquare.cc  hydraulicerosion.cc  midpointdisplacement.cc  perlin.cc  pixmapexporter.cc  simplexnoise.cc  terragenexporter.cc  thermalerosion.cc
src/: Makefile.am  bitmapexporter.cc  bitmapexporter.hh  blender3dio.cc  blender3dio.hh  erosiongenerator.cc  erosiongenerator.hh  generator.hh  heightmap.hh  heightmapexporter.hh  heightmapimpl.cc  heightmapimpl.hh  hydraulicerosion.cc  hydraulicerosion.hh  noisebase.cc  noisebase.hh  pixmapexporter.cc  pixmapexporter.hh  planediamondsquare.cc  planediamondsquare.hh  planegenerator.cc  planegenerator.hh  planeheightmap.cc  planeheightmap.hh  planemidpointdisplacement.cc  planemidpointdisplacement.hh  planenoisegenerator.cc  planenoisegenerator.hh  planesquaregenerator.cc  planesquaregenerator.hh  planesquareheightmap.cc  planesquareheightmap.hh  planesquarenoisegenerator.cc  planesquarenoisegenerator.hh  simplexnoise.cc  simplexnoise.hh  terragenexporter.cc  terragenexporter.hh  thermalerosion.cc  thermalerosion.hh
src/utils/: array2d.hh  array2d.ii  bitmap_image.hpp  data2D.hh  data2D.ii  data3D.hh  data3D.ii  side.hh  side.ii
test/: Makefile.am  concretetestmanager.cc  concretetestmanager.hh  diamondsquaretest.cc  diamondsquaretest.hh  diamondsquaretestmanager.cc  diamondsquaretestmanager.hh  hydraulictest.cc  hydraulictest.hh  hydraulictestmanager.cc  hydraulictestmanager.hh  midpointdisplacementtest.cc  midpointdisplacementtest.hh  midpointdisplacementtestmanager.cc  midpointdisplacementtestmanager.hh  simplextest.cc  simplextest.hh  simplextestmanager.cc  simplextestmanager.hh  test_diamondsquare.cc  test_hydraulicerosion.cc  test_mesh.cc  test_midpointdisplacement.cc  test_simplex.cc  test_simplex_erosion.cc  test_thermalerosion.cc  testmanager.cc  testmanager.hh  thermaltest.cc  thermaltest.hh  thermaltestmanager.cc  thermaltestmanager.hh
