AM_CPPFLAGS = -I ../src/
AM_DEFAULT_SOURCE_EXT = .cc

LDADD = ../src/libterrain.la -lcppunit

check_PROGRAMS = \
	test_midpointdisplacement \
	test_diamondsquare \
	test_mesh \
	test_thermalerosion \
	test_hydraulicerosion \
	test_simplex

test_thermalerosion_SOURCES = \
	test_thermalerosion.cc \
	testmanager.cc \
	simplextest.cc \
	simplextestmanager.cc \
	thermaltestmanager.cc \
	hydraulictestmanager.cc \
	thermaltest.cc \
	hydraulictest.cc \
	concretetestmanager.cc \
	midpointdisplacementtest.cc \
	midpointdisplacementtestmanager.cc \
	diamondsquaretest.cc \
	diamondsquaretestmanager.cc

test_hydraulicerosion_SOURCES = \
	test_hydraulicerosion.cc \
	testmanager.cc \
	simplextest.cc \
	simplextestmanager.cc \
	thermaltestmanager.cc \
	hydraulictestmanager.cc \
	thermaltest.cc \
	hydraulictest.cc \
	concretetestmanager.cc \
	midpointdisplacementtest.cc \
	midpointdisplacementtestmanager.cc \
	diamondsquaretest.cc \
	diamondsquaretestmanager.cc


test_simplex_SOURCES = \
	test_simplex.cc \
	testmanager.cc \
	simplextest.cc \
	simplextestmanager.cc \
	thermaltestmanager.cc \
	hydraulictestmanager.cc \
	thermaltest.cc \
	hydraulictest.cc \
	concretetestmanager.cc \
	midpointdisplacementtest.cc \
	midpointdisplacementtestmanager.cc \
	diamondsquaretest.cc \
	diamondsquaretestmanager.cc

test_midpointdisplacement_SOURCES = \
	test_midpointdisplacement.cc \
	testmanager.cc \
	simplextest.cc \
	simplextestmanager.cc \
	thermaltestmanager.cc \
	hydraulictestmanager.cc \
	thermaltest.cc \
	hydraulictest.cc \
	concretetestmanager.cc \
	midpointdisplacementtest.cc \
	midpointdisplacementtestmanager.cc \
	diamondsquaretest.cc \
	diamondsquaretestmanager.cc

test_diamondsquare_SOURCES = \
	test_diamondsquare.cc \
	testmanager.cc \
	simplextest.cc \
	simplextestmanager.cc \
	thermaltestmanager.cc \
	hydraulictestmanager.cc \
	thermaltest.cc \
	hydraulictest.cc \
	concretetestmanager.cc \
	midpointdisplacementtest.cc \
	midpointdisplacementtestmanager.cc \
	diamondsquaretest.cc \
	diamondsquaretestmanager.cc

test_mesh_SOURCES = \
	test_mesh.cc

TESTS = \
	test_midpointdisplacement \
	test_diamondsquare \
	test_mesh \
	test_thermalerosion \
	test_hydraulicerosion \
	test_simplex
